--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,8 @@ Saved/*
 Intermediate/*
 Plugins/*/Intermediate/*
 
+# Rider
+Plugins/Developer/RiderLink/*
+
 # Cache files for the editor to use
 DerivedDataCache/*
