add player in main level and triggers

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/FlappyBird/mapa.mapa
+EditorStartupMap=/Game/FlappyBird/mapa.mapa
 GlobalDefaultGameMode="/Script/DetectiveEnProblemas.DetectiveEnProblemasGameMode"
 
 [/Script/Engine.RendererSettings]
